@@ -1,6 +1,9 @@
 package ch.amana.android.cputuner.hw;
 
+import java.util.Set;
+
 import android.bluetooth.BluetoothAdapter;
+import android.bluetooth.BluetoothDevice;
 import android.content.ContentResolver;
 import android.content.Context;
 import android.content.Intent;
@@ -71,6 +74,15 @@ public class ServicesHandler {
 
 	public static void enableBluetooth(boolean enable) {
 		BluetoothAdapter bluetoothAdapter = BluetoothAdapter.getDefaultAdapter();
+		if (!enable) {
+			if (!SettingsStorage.getInstance().isSwitchPairedBluetooth()) {
+				Set<BluetoothDevice> bondedDevices = bluetoothAdapter.getBondedDevices();
+				if (bondedDevices != null && bondedDevices.size() > 0) {
+					Logger.w("Not switching bluetooth since it is paired to a device");
+					return;
+				}
+			}
+		}
 		if (bluetoothAdapter == null) {
 			Logger.i("Not switching bluetooth since its not present");
 			return;
