@@ -11,6 +11,7 @@ V 3.0.0
 - label powersave bias
 - update statics and log on click
 - animate pulsed service in list
+- do not switch bluetooth while paired (has to be enabled in settings)
 - minor things
 * bug fixes
 - start/stop notification entry on enable/disable
